[workspace]
members = ["codegen"]

[workspace.package]
edition = "2024"

[package]
name = "tent"
version = "0.2.0"
edition.workspace = true
description = "Lightweight HTML/CSS template engine"
license = "MIT"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
tent_codegen = { path = "codegen", version = "0.2.0" }
